--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,4 +4,43 @@
   padding: 0;
 }
 
-// TODO
+:root{
+  --white: #ffffff;
+  --black: #1A1D23;
+
+  --gray-100: #F8F8F8;
+  --gray-300: #D7D7D7;
+  --gray-400: #BBBBBB;
+
+  --pink-500: #FF57B2;
+}
+
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%;
+  }
+}
+
+body {
+  background: var(--black);
+  color: var(--white);
+}
+
+body, input,textarea, select, button {
+  font: 400 1rem 'Inter', sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
