feat: fetching posts to home from prismic

--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -10,8 +10,9 @@
     color: var(--gray-100);
   }
 
-  p {
+  h2 {
     font-size: 1.125rem;
+    font-weight: 400;
     color: var(--gray-300);
     line-height: 1.313rem;
     margin-top: 0.5rem;
