--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,41 @@
-// TODO
+.cover {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+}
+
+.post {
+  padding: 5rem 0;
+
+  h1 {
+    font-size: 3rem;
+  }
+}
+
+.info {
+  display: flex;
+  gap: 1.5rem;
+  margin: 1.5rem 0;
+
+  span {
+    display: flex;
+    align-items: center;
+
+    svg {
+      margin-right: 0.5rem;
+    }
+  }
+}
+
+.content {
+  margin-top: 2.5rem;
+
+  div + div {
+    margin-top: 4rem;
+  }
+
+  h2 {
+    font-size: 2.25rem;
+    margin-bottom: 1.5rem;
+  }
+}
